--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "prepare": "husky install && npm run fix:sass"
   },
   "dependencies": {
+    "@oit/element-ui-extend": "0.3.8-beta.16",
     "@unocss/reset": "^0.46.2",
     "@vueuse/core": "^9.0.0",
     "axios": "^1.1.3",
     "core-js": "^3.24.0",
+    "crypto-js": "^4.1.1",
     "element-ui": "^2.15.10",
+    "lodash-es": "^4.17.21",
     "vue": "^2.7.8",
     "vue-router": "^3.5.4"
   },
@@ -26,7 +29,7 @@
     "eslint": "^8.20.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "sass": "^1.55.0",
+    "sass": "^1.58.3",
     "sass-migrator": "^1.7.1",
     "typescript": "^4.7.4",
     "unocss": "^0.46.2",
